--- a/s3_working.yaml
+++ b/s3_working.yaml
@@ -1,7 +1,10 @@
-AWSTemplateFormatVersion: 2019-09-09
-Resorces:
+# Description of what this change includes
+# Revision number
+# Date
+AWSTemplateFormatVersion: 2010-09-09
+Resources:
   S3Bucket:
-    Type: 'AWS:S3:Bucket'
+    Type: 'AWS::S3::Bucket'
     Properties:
       PublicAccessBlockConfiguration:
         BlockPublicAcls: false
@@ -13,9 +16,10 @@ Resorces:
         ErrorDocument: error.html
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
-BucketPolicy:
-    #Type: 'AWS::S3::BucketPolicy'
+  BucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
     Properties:
+      Bucket: !Ref S3Bucket
       PolicyDocument:
         Id: MyPolicy
         Version: 2012-10-17
@@ -29,7 +33,6 @@ BucketPolicy:
               - - 'arn:aws:s3:::'
                 - !Ref S3Bucket
                 - /*
-      Bucket: !Ref S3Bucket
 Outputs:
   WebsiteURL:
     Value: !GetAtt 
